--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "^4.0.2",
     "@angular/platform-browser-dynamic": "^4.0.2",
     "@types/node": "^6.0.70",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.3.0",
     "zone.js": "^0.8.5"
   },
